// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RadioInput renders a disabled input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 fPdIRM"
          disabled=""
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cpejXz"
              disabled=""
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders a simple input 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erduql"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a form field label 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <label
        class="StyledText-sc-1sadyjn-0 lPqQk"
        for="some-input"
      >
        A brilliant input
      </label>
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erduql"
          for="some-input"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
              id="some-input"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a help message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <span
        class="StyledText-sc-1sadyjn-0 cTuErc"
      >
        This is a very cool input
      </span>
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erduql"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with a validation error 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erduql"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 boCmmO"
      >
        You failed at this
      </span>
    </div>
  </div>
</div>
`;

exports[`RadioInput renders an input with an info message 1`] = `
<div
  class="StyledGrommet-sc-19lkkz7-0 dXGtPO"
>
  <div
    class="sc-iBPTik bYpoIC"
  >
    <div
      class="StyledBox-sc-13pk1d4-0 jPjcaB FormField__FormFieldBox-sc-m9hood-0 dAuFqX sc-Qpmqz fGFfIK"
      tabindex="0"
    >
      <div
        class="StyledBox-sc-13pk1d4-0 fPvpMz FormField__FormFieldContentBox-sc-m9hood-1"
      >
        <label
          class="StyledRadioButton__StyledRadioButtonContainer-sc-g1f6ld-0 erduql"
        >
          <div
            class="StyledBox-sc-13pk1d4-0 JfRRw StyledRadioButton-sc-g1f6ld-5 chIzBU"
          >
            <input
              class="StyledRadioButton__StyledRadioButtonInput-sc-g1f6ld-1 cQcVYv"
              name="some-input"
              tabindex="-1"
              type="radio"
            />
            <div
              class="StyledBox-sc-13pk1d4-0 ePiYYW StyledRadioButton__StyledRadioButtonBox-sc-g1f6ld-4 kjEUYT"
            />
          </div>
          <span
            class="StyledRadioButton__StyledRadioButtonLabel-sc-g1f6ld-2 kALhEb"
          >
            Some input
          </span>
        </label>
      </div>
      <span
        class="StyledText-sc-1sadyjn-0 kwoXLv"
      >
        You can set a cool value
      </span>
    </div>
  </div>
</div>
`;
